# bayesian-sparse-gmm

./: .flake8  .gitignore  README.md  evaluate.py  pyproject.toml
.github/workflows/: release.yml
benchmarks/: DATA_REPORT.md  README.md  benchmark.py  benchmark_kmeans.py  benchmark_stress_test.py  data_pipeline.py  evaluate.py  generate_report.py  metrics.py  run_benchmark.py  run_olivetti_only.py  runner.py  tune_svi.py  visualize.py  visualize_kmeans.py
src/bayesian_sparse_gmm/: __init__.py  config.py  diagnostics.py  model.py  postprocessing.py  sampler.py  sparse_gmm.py  state.py  svi.py  urn.py  utils.py
src/bayesian_sparse_gmm/backends/: __init__.py  _base.py  _cuda.py  _numba.py  _numpy.py
src/bayesian_sparse_gmm/clustering/: __init__.py  kmeans.py
src/bayesian_sparse_gmm/clustering/kernels/: kmeans.cu
tests/: test_backends.py  test_cuda.py  test_diagnostics.py  test_identity_cov.py  test_kmeans_correctness.py  test_laplace.py  test_model.py  test_numba.py  test_phase1.py  test_sampler.py  test_sparse_gmm.py  test_synthetic.py  test_theta_update.py  test_urn_weight.py  test_variable_k.py  test_xi.py  test_xi_update.py
