[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bayesian-sparse-gmm"
dynamic = ["version"]
description = "Bayesian Sparse Gaussian Mixture Model implementation in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Nam Nam", email = "nampvh4436@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "matplotlib>=3.5.0",
]

[tool.hatch.version]
path = "src/bayesian_sparse_gmm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bayesian_sparse_gmm"]

[tool.isort]
profile = "black"

